[UPD] Header complete

--- a/css/style.css
+++ b/css/style.css
@@ -2,13 +2,13 @@
     padding: 0;
     margin: 0;
     box-sizing: border-box;
-    font-family: 'Roboto';
+    font-family: "Atkinson Hyperlegible Next", serif;
 }
 
 header{
-    padding: 25px 0;
-    background-color: #ADD8E7;
-    font-size: 25px;
+    padding: 10px 0;
+    background-color: #255EE9;
+    font-size: 18px;
 }
 
 footer{
@@ -19,7 +19,6 @@ footer{
 .container{
     margin: 0 auto;
     max-width: 1350px;
-    padding: 15px;
 }
 
 .container-sm{
@@ -32,8 +31,16 @@ footer{
     display: flex;
 }
 
-.justify-center{
+.space-between{
     justify-content: space-between;
+}
+
+.justify-center{
+    justify-content: center;
+}
+
+.align-center{
+    align-items: center;
 }
 
 .header-content ul{
@@ -163,4 +170,22 @@ footer{
 
 .mt-3{
     margin-top: 3px
+}
+
+.my-30{
+    margin: 30px 0;
+}
+
+.text-white{
+    color: white;
+}
+
+.btn{
+    border-radius: 20px;
+    padding: 10px 20px;
+}
+
+.btn-white{
+    background: white;
+    color: black;
 }
