--- a/css/style.css
+++ b/css/style.css
@@ -31,12 +31,20 @@ footer{
     display: flex;
 }
 
+.inline-block{
+    display: inline-block;
+}
+
 .column-direction{
     flex-direction: column
 }
 
 .space-between{
     justify-content: space-between;
+}
+
+.space-around{
+    justify-content: space-around;
 }
 
 .justify-center{
@@ -111,8 +119,21 @@ footer{
     width: 90%;
 }
 
+.flex-grow-2{
+    flex-grow: 2;
+}
+
+.flex-grow-1{
+    flex-grow: 1;
+}
+
+
 .col-20{
     width: 20%;
+}
+
+.col-15{
+    width: 15%;
 }
 
 .col-40{
@@ -133,6 +154,10 @@ footer{
 
 .bored{
     border: 1px solid red;
+}
+
+.mt-blue{
+    border-top: 3px solid #7289DA;
 }
 
 .text-center{
@@ -184,8 +209,8 @@ footer{
     margin: 50px auto;
 }
 
-.m-0{
-    margin: 0px;
+.mr-10{
+    margin-right: 10px;
 }
 
 .m-250{
@@ -194,6 +219,10 @@ footer{
 
 .mt-3{
     margin-top: 3px
+}
+
+.mt-20{
+    margin-top: 20px
 }
 
 .my-30{
@@ -215,6 +244,10 @@ footer{
 .btn{
     border-radius: 20px;
     padding: 10px 20px;
+}
+
+.btn-footer{
+    border-radius: 20px;
 }
 
 .btn-white{
@@ -278,6 +311,26 @@ footer{
 
 /* Footer */
 .footer-title{
-    
+    font-size: 45px;
+    color: #7289DA;
+    font-weight: 600;
 }
 
+.img-flag{
+    width: 6%;
+}
+
+.menu-column {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+    font-size: 20px;
+}
+
+.menu-column li{
+    margin: 15px 0;
+}
+
+.menu-column li:first-child{
+    color: #7289DA;
+}
